Implemented element_as name translation.

--- a/spec/data/sax_portals.yml
+++ b/spec/data/sax_portals.yml
@@ -21,6 +21,7 @@ ignore_unknown: true
 elements:
   relatedset:
     class: RelatedSet
+    as: portals
     delineate_with_hash: table
     elements:
       record:
