This commit not working so well - hash building is defaulting to array too much.

--- a/spec/data/sax_portals.yml
+++ b/spec/data/sax_portals.yml
@@ -21,7 +21,7 @@ ignore_unknown: true
 elements:
   relatedset:
     class: RelatedSet
-    as: portals
+    as_label: portals
     delineate_with_hash: table
     elements:
       record:
