--- a/spec/data/sax_resultset.yml
+++ b/spec/data/sax_resultset.yml
@@ -1,25 +1,4 @@
-#####  CONFIGURATION  #####
-
-YML = <<EEOOFF
-
-# YAML structure defining a SAX xml parsing scheme/fmp-grammar.
-# Options:
-#   elements:       <list of tag names as hash keys>
-#   class:          <class name for new element>
-#   depth:          <integer>
-#   ignore_unknown: <true/false>
-#   hide:           <true/false>
-#   before_close:   <method-name-as-symbol>
-#   each_before_close: <method-name-as-symbol>
-#   as_label:             <label>
-#   as_attribute:   <label>
-#   delineate_with: <object-to-contain-element(s)-when-conflict>
-#   delineate_on:   <attribute-of-new-element-used-to-delineate-tags-with-same-name>
-#   initialize_with: <code to evaluate while passing to new() method of element class>
-#   individual_attributes: <give each attribute it's own instance variable - not used yet>
-#   hide_attributes: <force attributes into @att, instead of using hash keys>
-
-###################################################################
+#####  SAX PARSER CONFIGURATION  #####
 ---
 elements:
   fmresultset:
@@ -47,7 +26,6 @@ elements:
                 before_close: :build_record_data
               relatedset:
                 class: RelatedSet
-                #as_label: portals
                 as_attribute: portals
                 delineate_with_hash: table
                 elements:
@@ -60,5 +38,3 @@ elements:
                         hide: true
                         before_close: :build_record_data
 ...
-###################################################################
-EEOOFF
