--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -1,23 +1,5 @@
 # YAML structure defining a SAX xml parsing scheme/fmp-grammar.
-# Options:
-#   elements:       <list of tag names as hash keys>
-#   class:          <class name for new element>
-#   depth:          <integer>
-#   ignore_unknown: <true/false>
-#   hide:           <true/false>
-#   before_close:   <method-name-as-symbol>
-#   each_before_close: <method-name-as-symbol>
-#   as:             <label>
-#   as_attribute:   <label>
-#   delineate_with: <object-to-contain-element(s)-when-conflict>
-#   delineate_on:   <attribute-of-new-element-used-to-delineate-tags-with-same-name>
-#   initialize_with: <code to evaluate while passing to new() method of element class>
-#   individual_attributes: <give each attribute it's own instance variable - not used yet>
-#   hide_attributes: <force attributes into @att, instead of using hash keys>
 
-
-
-###################################################################
 elements:
   fmresultset:
     class: FmResultset
@@ -30,33 +12,36 @@ elements:
         elements:
           field_definition:
       resultset:
+        allocate: true
         class: Resultset
         before_close: :attach_parent_objects
         elements:
           record:
+            allocate: true
             class: Record
             hide_attributes: true
             elements:
               field:
+                allocate: true
                 class: Field
-                hide: true
-                before_close: :build_record_data
+                #hide: true
+                #before_close: :build_record_data
               relatedset:
+                allocate: true
                 class: RelatedSet
-                #as: portals
                 as_attribute: portals
                 delineate_with_hash: table
-                #hide: true
-                #before_close: attach_relatedset_to_portals_hash
                 elements:
                   record:
+                    allocate: true
                     class: Record
                     hide_attributes: true
                     elements:
                       field:
+                        allocate: true
                         class: Field
-                        hide: true
-                        before_close: :build_record_data
+                        #hide: true
+                        #before_close: :build_record_data
 ###################################################################
 
 
