Sax parser config for flattening FmResultset is working.

--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -1,12 +1,64 @@
 #!/usr/bin/env ruby
 # YAML structure defining a SAX xml parsing scheme/fmp-grammar.
 
+
+---
+#compact: true
+attach_elements: individual
+elements:
+- name: fmresultset
+  class: Rfm::FmResultset
+  ignore: ['self']
+- name: datasource
+  class: Rfm::Datasource
+- name:  metadata
+  class: Rfm::Meta
+  elements:
+  - name: field_definition
+    as_name: field_meta
+    attach: hash
+  - name: portal_definition
+    as_name: portal_meta
+    attach: hash
+- name: resultset
+  attach_attributes: individual
+  ignore: ['self']
+- name: record
+  class: Rfm::Record
+  attach_attributes: individual
+  attach: hash
+  #initialize: [new, _obj]
+  elements:
+  - name: field
+    class: Rfm::Metadata::Field
+    attach_attributes: individual
+    compact: true
+    attach: none
+    before_close: :build_record_data
+  - name: relatedset
+    class: Rfm::RelatedSet
+    attach: individual
+    as_name: portals
+    delineate_with_hash: table
+    elements:
+    - name: record
+      class: Rfm::Record
+      attach_attributes: individual
+      elements:
+      - name: field
+        compact: true
+        class: Rfm::Metadata::Field
+        attach: none
+        before_close: :build_record_data
+
+
+# This works great!
 ---
 compact: true
 elements:
 - name: fmresultset
   class: Rfm::FmResultset
-  #attach: none
+  attach: none
   #ignore: [self]
   elements:
   - name: datasource
