--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -24,7 +24,7 @@ elements:
 - name: field_definition
   delineate_with_hash: name
   as_name: field_meta
-- name: portal_definition
+- name: relatedset_definition
   delineate_with_hash: table
   as_name: portal_meta
 - name: resultset
@@ -47,6 +47,7 @@ elements:
     elements:
     - name: record
       class: Rfm::Record
+      attach: array
       elements:
       - name: field
         compact: true
