Fixed bug where custom class would bomb if it was subclassed from String.

--- a/lib/rfm/sax/fmpxmllayout.yml
+++ b/lib/rfm/sax/fmpxmllayout.yml
@@ -34,7 +34,11 @@ elements:
   attach_attributes: instance
   delineate_with_hash: NAME
   attach_elements: array
-  
+  elements:
+  - name: VALUE
+    attach: cursor
+    class: Rfm::Metadata::Value
+    before_close: :attach_objects
   
   
 # Works !!!
