--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -24,9 +24,11 @@ elements:
 - name: field_definition
   delineate_with_hash: name
   as_name: field_meta
+  attach: instance
 - name: relatedset_definition
   delineate_with_hash: table
   as_name: portal_meta
+  attach: instance
 - name: resultset
   attach: none
   attach_attributes: shared
@@ -38,7 +40,7 @@ elements:
     class: Rfm::Metadata::Field
     compact: true
     attach: cursor
-    before_close: :build_record_data
+    before_close: :end_element_callback
   - name: relatedset
     class: Rfm::RelatedSet
     attach: instance
@@ -53,7 +55,61 @@ elements:
         compact: true
         class: Rfm::Metadata::Field
         attach: cursor
-        before_close: :build_record_data
+        before_close: :end_element_callback
+
+
+# ---
+# elements:
+# - name: fmresultset
+#   attach: none
+#   attach_attributes: shared
+# - name: product
+#   attach: shared
+# - name: error
+#   attach: none
+#   attributes:
+#   - name: code
+#     as_name: error
+#     attach: shared
+# - name: datasource
+#   attach: none
+#   #class: Rfm::Datasource
+#   attach_attributes: shared
+# - name:  metadata
+#   attach: none
+# - name: field_definition
+#   delineate_with_hash: name
+#   as_name: field_meta
+# - name: relatedset_definition
+#   delineate_with_hash: table
+#   as_name: portal_meta
+# - name: resultset
+#   attach: none
+#   attach_attributes: shared
+# - name: record
+#   class: Rfm::Record
+#   attach: array
+#   elements:
+#   - name: field
+#     class: Rfm::Metadata::Field
+#     compact: true
+#     attach: cursor
+#     before_close: :end_element_callback
+#   - name: relatedset
+#     class: Rfm::RelatedSet
+#     attach: instance
+#     as_name: portals
+#     delineate_with_hash: table
+#     elements:
+#     - name: record
+#       class: Rfm::Record
+#       attach: array
+#       elements:
+#       - name: field
+#         compact: true
+#         class: Rfm::Metadata::Field
+#         attach: cursor
+#         before_close: :end_element_callback
 
 
 # ---
