--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -2,6 +2,7 @@
 # YAML structure defining a SAX xml parsing scheme/fmp-grammar.
 
 
+# This puts field_meta and portal_meta in separate instance variables.
 ---
 elements:
 - name: fmresultset
@@ -24,11 +25,11 @@ elements:
 - name: field_definition
   delineate_with_hash: name
   as_name: field_meta
-  attach: instance
+  attach: shared
 - name: relatedset_definition
   delineate_with_hash: table
   as_name: portal_meta
-  attach: instance
+  attach: shared
 - name: resultset
   attach: none
   attach_attributes: shared
@@ -56,6 +57,64 @@ elements:
         class: Rfm::Metadata::Field
         attach: cursor
         before_close: :end_element_callback
+
+
+
+# # This puts field_meta and portal_meta in separate instance variables.
+# ---
+# elements:
+# - name: fmresultset
+#   attach: none
+#   attach_attributes: shared
+# - name: product
+#   attach: shared
+# - name: error
+#   attach: none
+#   attributes:
+#   - name: code
+#     as_name: error
+#     attach: shared
+# - name: datasource
+#   attach: none
+#   #class: Rfm::Datasource
+#   attach_attributes: shared
+# - name:  metadata
+#   attach: none
+# - name: field_definition
+#   delineate_with_hash: name
+#   as_name: field_meta
+#   attach: instance
+# - name: relatedset_definition
+#   delineate_with_hash: table
+#   as_name: portal_meta
+#   attach: instance
+# - name: resultset
+#   attach: none
+#   attach_attributes: shared
+# - name: record
+#   class: Rfm::Record
+#   attach: array
+#   elements:
+#   - name: field
+#     class: Rfm::Metadata::Field
+#     compact: true
+#     attach: cursor
+#     before_close: :end_element_callback
+#   - name: relatedset
+#     class: Rfm::RelatedSet
+#     attach: instance
+#     as_name: portals
+#     delineate_with_hash: table
+#     elements:
+#     - name: record
+#       class: Rfm::Record
+#       attach: array
+#       elements:
+#       - name: field
+#         compact: true
+#         class: Rfm::Metadata::Field
+#         attach: cursor
+#         before_close: :end_element_callback
 
 
 # ---
@@ -111,212 +170,3 @@ elements:
 #         attach: cursor
 #         before_close: :end_element_callback
 
-
-# ---
-# attach_elements: individual
-# elements:
-# - name: fmresultset
-#   ignore: self
-#   attach_attributes: shared
-# - name: datasource
-#   ignore: self
-#   class: Rfm::Datasource
-#   attach_attributes: shared
-# - name:  metadata
-#   ignore: self
-# - name: field_definition
-#   as_name: field_meta
-# - name: portal_definition
-#   as_name: portal_meta
-# - name: resultset
-#   ignore: self
-#   attach_attributes: shared
-# - name: record
-#   class: Rfm::Record
-#   attach: array
-#   elements:
-#   - name: field
-#     class: Rfm::Metadata::Field
-#     compact: true
-#     attach: none
-#     before_close: :build_record_data
-#   - name: relatedset
-#     class: Rfm::RelatedSet
-#     attach: individual
-#     as_name: portals
-#     delineate_with_hash: table
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       elements:
-#       - name: field
-#         compact: true
-#         class: Rfm::Metadata::Field
-#         attach: none
-#         before_close: :build_record_data
-
-
-
-# ---
-# #compact: true
-# attach_elements: individual
-# elements:
-# - name: fmresultset
-#   class: Rfm::FmResultset
-#   ignore: ['self']
-# - name: datasource
-#   class: Rfm::Datasource
-# - name:  metadata
-#   class: Rfm::Meta
-#   elements:
-#   - name: field_definition
-#     as_name: field_meta
-#     attach: hash
-#   - name: portal_definition
-#     as_name: portal_meta
-#     attach: hash
-# - name: resultset
-#   attach_attributes: individual
-#   ignore: ['self']
-# - name: record
-#   class: Rfm::Record
-#   attach_attributes: individual
-#   attach: hash
-#   #initialize: [new, _obj]
-#   elements:
-#   - name: field
-#     class: Rfm::Metadata::Field
-#     attach_attributes: individual
-#     compact: true
-#     attach: none
-#     before_close: :build_record_data
-#   - name: relatedset
-#     class: Rfm::RelatedSet
-#     attach: individual
-#     as_name: portals
-#     delineate_with_hash: table
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       attach_attributes: individual
-#       elements:
-#       - name: field
-#         compact: true
-#         class: Rfm::Metadata::Field
-#         attach: none
-#         before_close: :build_record_data
-
-
-# This works great!
-# ---
-# compact: true
-# elements:
-# - name: fmresultset
-#   class: Rfm::FmResultset
-#   attach: none
-#   #ignore: [self]
-#   elements:
-#   - name: datasource
-#     class: Rfm::Datasource
-#   - name:  metadata
-#     class: Rfm::Meta
-#     #attach: none
-#     #before_close: attach_meta_objects_to_resultset
-#     elements:
-#     - name: field_definition
-#       as_name: field_meta
-#     - name: portal_definition
-#       as_name: portal_meta
-#   - name: resultset
-#     initialize: [new, _top._obj]
-#     #ignore: [self]
-#     class: Rfm::Resultset
-#     attach_attributes: individual
-#     #before_close: :attach_parent_objects
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       attach_attributes: individual
-#       #initialize: [new, _obj]
-#       elements:
-#       - name: field
-#         class: Rfm::Metadata::Field
-#         attach_attributes: individual
-#         compact: true
-#         attach: none
-#         before_close: :build_record_data
-#       - name: relatedset
-#         class: Rfm::RelatedSet
-#         attach: individual
-#         as_name: portals
-#         delineate_with_hash: table
-#         elements:
-#         - name: record
-#           class: Rfm::Record
-#           attach_attributes: individual
-#           elements:
-#           - name: field
-#             compact: true
-#             class: Rfm::Metadata::Field
-#             attach: none
-#             before_close: :build_record_data
-
-# ---
-# individual_attributes:
-# elements:
-#   fmresultset:
-#     class: Rfm::FmResultset
-#     #hide: true
-#     ignore: true
-#     elements:
-#       datasource:
-#         class: Rfm::Datasource
-#       metadata:
-#         class: Rfm::Meta
-#         #hide: true
-#         #before_close: attach_meta_objects_to_resultset
-#         elements:
-#           field_definition:
-#             as_label: field_meta
-#           portal_definition:
-#             as_label: portal_meta
-#       resultset:
-#         #allocate: true
-#         # This is evaluated from the cursor point of view.
-#         # It gives the top object, which should be the Rfm::Connection instance.
-#         #initialize_with: _top._obj
-#         ignore: true
-#         #class: Rfm::Resultset
-#         individual_attributes: true
-#         #before_close: :attach_parent_objects
-#         elements:
-#           record:
-#             allocate: true
-#             class: Rfm::Record
-#             hide_attributes: true
-#             individual_attributes: true
-#             #initialize_with: _obj
-#             elements:
-#               field:
-#                 allocate: true
-#                 class: Rfm::Metadata::Field
-#                 compact: true
-#                 hide: true
-#                 before_close: :build_record_data
-#               relatedset:
-#                 allocate: true
-#                 class: Rfm::RelatedSet
-#                 as_attribute: portals
-#                 delineate_with_hash: table
-#                 elements:
-#                   record:
-#                     allocate: true
-#                     class: Rfm::Record
-#                     hide_attributes: true
-#                     elements:
-#                       field:
-#                         compact: true
-#                         allocate: true
-#                         class: Rfm::Metadata::Field
-#                         hide: true
-#                         before_close: :build_record_data
