Continued conversion to sax-parser. Consolidated Base.new, Base#inititalize into Rfm::Record. Fixed validation callbacks issue.

--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -35,6 +35,7 @@ elements:
   attach_attributes: shared
 - name: record
   class: Rfm::Record
+  initialize: [new, object]
   attach: array
   elements:
   - name: field
